--- a/style.css
+++ b/style.css
@@ -23,7 +23,8 @@ body {
 }
 
 .button {
-    padding: 0.5rem 2rem;
+    padding: 1rem 2rem;
+    margin: 10px;
     background: none;
     border: none;
     box-shadow: 0px 5px 10px rgba(0, 0, 0, 0.2);
